--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
 	"type": "module",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node index.js",
+		"serve": "nodemon index.js"
 	},
 	"dependencies": {
-		"@types/yargs": "^17.0.33",
 		"chalk": "^4.1.2",
 		"yargs": "^17.7.2"
+	},
+	"devDependencies": {
+		"nodemon": "^3.1.10",
+		"@types/yargs": "^17.0.33"
 	}
 }
