--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
 	},
 	"dependencies": {
 		"chalk": "^4.1.2",
+		"ejs": "^3.1.10",
+		"express": "^5.1.0",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
-		"nodemon": "^3.1.10",
-		"@types/yargs": "^17.0.33"
+		"@types/yargs": "^17.0.33",
+		"nodemon": "^3.1.10"
 	}
 }
