--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
 		"serve": "nodemon index.js"
 	},
 	"dependencies": {
+		"bcrypt": "^6.0.0",
 		"chalk": "^4.1.2",
+		"cookie-parser": "^1.4.7",
 		"ejs": "^3.1.10",
 		"express": "^5.1.0",
+		"jsonwebtoken": "^9.0.2",
 		"mongoose": "^8.15.0",
+		"validator": "^13.15.0",
 		"yargs": "^17.7.2"
 	},
 	"devDependencies": {
