--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"bcrypt": "^6.0.0",
 		"chalk": "^4.1.2",
 		"cookie-parser": "^1.4.7",
+		"dotenv": "^16.5.0",
 		"ejs": "^3.1.10",
 		"express": "^5.1.0",
 		"jsonwebtoken": "^9.0.2",
